Change package to avoid ambiguity, update server flags